# odb-extractor

./: .gitignore  LICENSE  README.md  config.json  example_cfg.json  pyproject.toml  setup.py  test_cfg.json
odbex/: __init__.py  __main__.py  _explorer.py  _json.py  post.py
odbex/_config/: config.json
odbex/abqpy/: __init__.py  __main__.py  _extract.py  _json.py  extract.py  extractor.py
odbex/abqpy/scripts/: __init__.py  get_sample_config.py
odbex/abqpy/tests/: test_odb_handler.py
odbex/abqpy_legacy/: _utils.py  extractor.py  extractor_.py
odbex/post/: simdata.py
odbex/py3/: simdata.py
odbex/raw_odbex/: extracted_9elem_composite_cure_perm2_4cpu.json
odbex/scripts/: extract_odb_field_data.py
tests/: extracted_9elem_composite_cure_perm1_2cpu.json  odbex_cfg.ini  odbex_cfg.json  odbex_cfg.xml  sbatch_test  test_cfg.py  test_results.ipynb
tests/raw_odbex/: extracted_9elem_composite_cure_perm1_2cpu.json  extracted_rimr_carbon_1fib_vf_0p55_RI_fbc_16cpu_22.json
tests/slurm_out/odbex/: 23397767_4294967294.err  23397767_4294967294.out  23397771_4294967294.out
